--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -10,7 +10,7 @@
     <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.34" PrivateAssets="all" />
-    <PackageReference Include="MonoDetour.HookGen" Version="0.1.0-*" PrivateAssets="all" />
-    <PackageReference Include="MonoDetour" Version="0.1.0-*" />
+    <PackageReference Include="MonoDetour.HookGen" Version="0.5.4" PrivateAssets="all" />
+    <PackageReference Include="MonoDetour" Version="0.6.1" />
   </ItemGroup>
 </Project>
