--- a/src/OfflinePatch/OfflinePatch.csproj
+++ b/src/OfflinePatch/OfflinePatch.csproj
@@ -10,5 +10,6 @@
     <Reference Include="$(ManagedDirectory)Assembly-CSharp.dll" Publicize="true" Private="false" />
     <Reference Include="$(ManagedDirectory)UnityEngine.CoreModule.dll" Private="false" />
     <Reference Include="$(ManagedDirectory)FishNet.Runtime.dll" Private="false" />
+    <Reference Include="$(ManagedDirectory)Unity.TextMeshPro.dll" Private="false" />
   </ItemGroup>
 </Project>
